# Random-Stuff-AI-related-that-I-hate-doing

./: Placeholder  README.md  ignore
Adapi/: Branching basis.txt  Notice.md  Pseudo.txt  README.md  Temp.cpp  goals.txt
PI-LLM-V1/: CMakeLists.txt  README.md
PI-LLM-V1/data/: dataset.txt
PI-LLM-V1/include/: char_mapping.h
PI-LLM-V1/src/: lstm.h  main.cpp  utils.h
PI-LLM-V1/web/: index.html
Supermodel/: README.md
